Fix: adjust modal spacing using padding, not absolute position (#446)

--- a/src/mobile/styles/components/Modal.pcss
+++ b/src/mobile/styles/components/Modal.pcss
@@ -69,7 +69,7 @@
   }
 
   &__body {
-    height: 65vh;
+    height: 70vh;
     overflow-y: scroll;
   }
 }
