--- a/src/mobile/styles/components/WalletWithdrawBody.pcss
+++ b/src/mobile/styles/components/WalletWithdrawBody.pcss
@@ -27,8 +27,8 @@
 
   &__confirmation {
     .cr-mobile-modal__block--open {
-      height: 50vh;
-      top: 47vh;
+      height: 55vh;
+      top: 42vh;
     }
   }
 
@@ -45,6 +45,12 @@
         color: var(--primary-text-color);
         text-align: left;
       }
+    }
+  }
+
+  .pg-beneficiaries {
+    .cr-mobile-modal__block--open {
+      top: 0;
     }
   }
 
@@ -133,6 +139,7 @@
         }
       }
     }
+
     .beneficiaries-add-address-modal {
       padding: 24px 14px;
       input {
@@ -148,6 +155,7 @@
         }
       }
     }
+
     &__header {
       &-back {
         display: none;
@@ -163,6 +171,10 @@
       &-close {
         flex: 0;
       }
+    }
+
+    &__body {
+      height: calc(100vh - 56px);
     }
   }
 }
